// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}


enum OrderStatus {
  PENDING
  CONFIRMED
  DELIVERED
  COMPLETED
  REQUESTCANCEL
  CANCELLED
  REFUNDED
}

enum UserRole {
  ADMIN
  USER
}

model User {
  id            Int      @id @default(autoincrement())
  email         String   @unique @db.VarChar(45)
  name          String?  @db.VarChar(100)
  username      String   @unique
  role          UserRole   @default(USER)
  isVerified    Boolean  @default(false)
  password      String   @db.VarChar(100)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  cart          Cart?
  orders        Order[]
  shippingAddresses ShippingAddress[]
  phoneNumber     String?   @db.VarChar(15)
  gender         String?   @db.VarChar(10)
  dayOfBirth     Int?
  monthOfBirth   Int?
  yearOfBirth    Int?
}

model Category {
  id         Int         @id @default(autoincrement())
  name       String      @unique
  parentId   Int?
  parent     Category?   @relation("CategorySelf", fields: [parentId], references: [id], onDelete: Cascade)
  children   Category[]  @relation("CategorySelf")
  products   ProductCategory[] 
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
}


model Product {
  id             Int                @id @default(autoincrement())
  name           String
  description    String
  displayImage   String[]
  categories     ProductCategory[]
  productDetails ProductDetail[]
  createdAt      DateTime           @default(now())
  updatedAt      DateTime           @updatedAt
  vendor         String
  tags           String[]
}

model ProductCategory {
  productId  Int
  categoryId Int
  product    Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  category   Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@id([productId, categoryId])
}

model ProductDetail {
  id          Int      @id @default(autoincrement())
  productId   Int
  size        String?
  color       String?
  stock       Int
  sale        Int      @default(0)
  price       Float
  discountPercentage Float @default(0)
  cartItems   CartItem[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  product     Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  imageId             Int?
  image               ProductImage?   @relation(fields: [imageId], references: [id], onDelete: SetNull)
  orderItems          OrderItem[]     @relation("ProductDetailToOrderItem")
}

model ProductImage {
  id          Int        @id @default(autoincrement())
  url         String      @unique
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  productDetails ProductDetail[]
}


model Cart {
  id         Int      @id @default(autoincrement())
  userId     Int      @unique
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  cartItems  CartItem[]
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model CartItem {
  id               Int            @id @default(autoincrement())
  cartId           Int
  productDetailId  Int
  quantity         Int
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
  cart             Cart           @relation(fields: [cartId], references: [id], onDelete: Cascade)
  productDetail    ProductDetail  @relation(fields: [productDetailId], references: [id], onDelete: Cascade)
}

model Order {
  id               Int             @id @default(autoincrement())
  userId           Int
  shippingAddressId Int
  createdAt        DateTime        @default(now())
  updatedAt        DateTime        @updatedAt
  shippingAddress  ShippingAddress @relation(fields: [shippingAddressId], references: [id])
  orderItems       OrderItem[]
  status           OrderStatus     @default(PENDING)
  shippingFee      Int?        
  trackingCode     String?  
  paidAt           DateTime?
  confirmedAt      DateTime?
  deliveredAt      DateTime?
  completedAt      DateTime?
  canceledAt       DateTime?
  requestCancelAt  DateTime?
  refundedAt       DateTime?

  user             User            @relation(fields: [userId], references: [id])
  payment          Payment?
}

model OrderItem {
  id              Int      @id @default(autoincrement())
  orderId         Int
  productDetailId Int
  quantity        Int
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  productDetail   ProductDetail @relation("ProductDetailToOrderItem", fields: [productDetailId], references: [id], onDelete: Cascade)
  order           Order    @relation(fields: [orderId], references: [id])
}

model Payment {
  id           Int       @id @default(autoincrement())
  orderId      Int       @unique
  method       String
  status       String    // UNPAID, PAID, FAILED, REFUNDED
  amount       Int       
  responseData Json?     
  paidAt       DateTime?

  order        Order     @relation(fields: [orderId], references: [id], onDelete: Cascade)
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt
}

model ShippingAddress {
  id              Int      @id @default(autoincrement())
  userId          Int
  fullName        String
  phoneNumber     String   @db.VarChar(15)
  homeNumber      String
  wardCode        Int
  isDefault       Boolean  @default(false)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  moreDetail      String

  user            User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  ward            Ward     @relation(fields: [wardCode], references: [wardCode], onDelete: Cascade)

  orders      Order[]
}

model Ward {
  wardCode      Int  @id
  name          String
  districtCode  Int

  district      District    @relation(fields: [districtCode], references: [districtCode], onDelete: Cascade)
  
  shippingAddress   ShippingAddress[]
}

model District {
  districtCode     Int      @id
  name             String
  cityCode         Int

  city             City     @relation(fields: [cityCode], references: [cityCode], onDelete: Cascade)
  wards            Ward[]
}

model City {
  cityCode    Int      @id
  name        String

  districts   District[]
}
